[package]
name = "yenta"
version = "0.1.0"
authors = ["Rob Tumarkin <r.tumarkin@unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
conv = "0.3.3"
counter = "0.5.2"
deunicode = "1.1.1"
rayon = "1.4.1"
serde = "1.0.116"
soundex = "0.2.0"

