[package]
name = "yenta"
version = "0.1.0"
authors = ["Rob Tumarkin <r.tumarkin@unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# conv = "0.3.3"
clap = "2.33.3"
console = "0.12.0"
counter = "0.5.2"
csv = "1.0.0"
deunicode = "1.1.1"
getset = "0.1.1"
indicatif = {version = "0.15.0", features = ["rayon"]}
itertools = "0.9.0"
min-max-heap = "1.3.0"
ngrams = "1.0.1"
rayon = "1.4.1"
serde = {version = "1.0.116", features = ["derive"]}
soundex = "0.2.0"

