[package]
name = "yenta"
version = "0.2.0"
authors = ["Rob Tumarkin <r.tumarkin@unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
counter = "0.5.2"
csv = "1.0.0"
deunicode = "1.1.1"
getset = "0.1.1"
indicatif = {version = "0.15.0", features = ["rayon"]}
itertools = "0.9.0"
min-max-heap = "1.3.0"
ngrams = "1.0.1"
rayon = "1.4.1"
serde = {version = "1.0.116", features = ["derive"]}
soundex = "0.2.0"
strsim = "0.10.0"
structopt = "0.3.20"

[dev-dependencies]
assert_approx_eq = "1.1.0"

